Finish line crossing detection.
Script detects if the player crosses the line defined in finishLine.

--- a/TougePlugin/TougePlugin.csproj
+++ b/TougePlugin/TougePlugin.csproj
@@ -42,6 +42,9 @@
       <None Update="lua\teleport.lua">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="lua\timing.lua">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="assets\Elo.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
