Add toggle for Outrun and Course race types in invite menu
Players can now choose what race type they want to play before inviting an opponent.

--- a/TougePlugin/TougePlugin.csproj
+++ b/TougePlugin/TougePlugin.csproj
@@ -69,6 +69,11 @@
       <None Update="assets\Tutorial.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="assets\Toggle.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
